--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css
@@ -1,76 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-header {
-    background-color: rgb(58, 73, 214);
-    font-size: 22px;
-    padding: 30px;
-    color: white;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-}
-
-
-
-.header-right a {
-    color: #ffffff;
-}
-
-.menu {
-    text-align: center;
-    padding: 10px;
-    margin: 10px;
-}
-
-.logo {
-    float: left;
-    text-transform: uppercase;
-    text-shadow: 0 0 5px #000;
-    font-weight: bold;
-    color: white;
-}
-
-.logo span {
-    color: #333;
-    text-shadow: 0 0 5px #ccc;
-}
-
-.home {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    padding: 20px;
-    justify-content: space-between;
-    padding: 30px;
-}
-
-.keywords {
-    text-align: center;
-    padding: 10px;
-    margin: 10px;
-}
-
-.table {
-    border-color: #000;
-}
-
 .paquetesConsulta {
     width: 70%;
     display: flex;
@@ -78,117 +5,12 @@ header {
     justify-content: space-between;
 }
 
-.footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-/* Estilos para el dropdown*/
-.dropdown {
-    position: relative;
-    display: inline-block;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-}
-
-.dropbtn {
-    background-color: rgb(58, 73, 214);
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 1rem;
-    padding-right: 2rem;
-    position: relative;
-}
-
-.opcionMenu {
-    width: 239px;
-    height: 56px;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(58, 73, 214);
-    min-width: 10rem;
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    height: 30px;
-}
-
-.dropdown-content a:hover {
-    background-color: #333;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.active {
-    font-weight: bold;
-}
-
-/* Estilos para hacer responsive */
-@media screen and (max-width: 768px) {
-    header {
-        flex-direction: column;
-        align-items: flex-start;
-        text-align: center;
-    }
-
-    .header-center {
-        margin-top: 1rem;
-    }
-
-    main {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .main-left,
-    .main-center,
-    .main-right {
-        width: 100%;
-        text-align: center;
-    }
-
-    .dropdown {
-        text-align: center;
-    }
-}
-
-.btn.btn-secondary {
-    background-color: rgb(58, 73, 214);
-    border: #000 solid 1px;
-
-}
-
-.dropbtn::after {
-    content: "▼";
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    font-weight: bold;
-}
-
 /* Estilos para el centro*/
 .mainCenter {
-    max-height: 760px;
-    max-width: 800px;
+    max-height: 51.3rem;
+    max-width: 54rem;
     margin: 0 auto;
-    width: 800px;
+    width: 54rem;
     display: flex;
 }
 
@@ -200,12 +22,12 @@ header {
     padding: 1rem;
     padding-right: 2rem;
     position: relative;
-    width: 300px;
+    width: 20.25rem;
     min-width: none;
-    max-width: 300px;
-    height: 56px;
+    max-width: 20.25rem;
+    height: 3.78rem;
     text-align: center;
-    max-height: 56px;
+    max-height: 3.78rem;
     min-height: none;
 }
 
@@ -213,7 +35,7 @@ header {
     content: "▼";
     position: absolute;
     top: 50%;
-    right: 10px;
+    right: 0.675rem;
     transform: translateY(-50%);
     font-weight: bold;
 }
@@ -231,7 +53,7 @@ header {
     color: white;
     text-decoration: none;
     display: block;
-    width: 300px;
+    width: 20.25rem;
 }
 
 .dropdownConsulta-content a:hover {
@@ -248,32 +70,30 @@ header {
     text-align: center;
 }
 
-/* Estilos para la informacion del paquete */
-
 .infoPaquete {
-    max-width: 400px;
-    width: 400px;
-    min-width: 400px;
-    max-height: 565px;
-    height: 565px;
+    max-width: 27rem;
+    width: 27rem;
+    min-width: 27rem;
+    max-height: 38.1375rem;
+    height: 38.1375rem;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1.35rem;
     background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    padding-bottom: 100px;
+    border: 0.0675rem solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
+    padding-bottom: 6.75rem;
     position: relative;
 }
 
 .h7 {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 1.8225rem;
+    margin-bottom: 1.35rem;
 }
 
 .ofertaDatosView {
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 0.675rem;
     text-align: left;
 }
 
@@ -290,13 +110,13 @@ header {
 .dropdownConsulta {
     position: relative;
     display: inline-block;
-    max-width: 800px;
+    max-width: 54rem;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1.35rem;
     background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border: 0.0675rem solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
 }
 
 .paquetesConsulta {
@@ -306,15 +126,15 @@ header {
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1.35rem;
     background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border: 0.0675 solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
 }
 
 .espacio {
-    margin-top: 20px;
+    margin-top: 1.35rem;
 }
 
 .ofertasLaborales {
@@ -322,21 +142,21 @@ header {
 }
 
 .opcionConsulta {
-    width: 300px;
-    height: 30px;
+    width: 20.25rem;
+    height: 2.025rem;
 }
 
 .ofertasLaborales {
     position: relative;
     display: inline-block;
-    max-width: 800px;
+    max-width: 54rem;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1.35rem;
     background-color: #fff;
     background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border: 0.0675rem solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
 }
 
 .dropbtnOfertas {
@@ -347,12 +167,12 @@ header {
     padding: 1rem;
     padding-right: 2rem;
     position: relative;
-    width: 300px;
+    width: 20.25rem;
     min-width: none;
-    max-width: 300px;
-    height: 56px;
+    max-width: 20.25rem;
+    height: 3.78rem;
     text-align: center;
-    max-height: 56px;
+    max-height: 3.78rem;
     min-height: none;
 }
 
@@ -360,7 +180,7 @@ header {
     content: "▼";
     position: absolute;
     top: 50%;
-    right: 10px;
+    right: 0.675rem;
     transform: translateY(-50%);
     font-weight: bold;
 }
@@ -368,9 +188,9 @@ header {
 .dropdownOfertas {
     position: relative;
     display: inline-block;
-    max-width: 800px;
+    max-width: 54rem;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1.35rem;
 }
 
 .dropdownOfertas-content {
@@ -380,7 +200,7 @@ header {
     min-width: 10rem;
     z-index: 1;
     text-align: center;
-    width: 300px;
+    width: 20.25rem;
     display: none;
 }
 
@@ -389,7 +209,7 @@ header {
     color: white;
     text-decoration: none;
     display: block;
-    width: 300px;
+    width: 20.25rem;
 }
 
 .dropdownOfertas-content a:hover {
