--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaUsuario.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaUsuario.css
@@ -1,170 +1,60 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-header,
-footer {
-    background-color: rgb(58, 73, 214);
-    font-size: 22px;
-    padding: 30px;
-    color: white;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-}
-
-.footer {
-    height: 75px;
-}
-
-.header-right a {
-    color: #ffffff;
-}
-
-.menu {
-    text-align: center;
-    padding: 10px;
-    margin: 10px;
-}
-
-.logo {
-    float: left;
-    text-transform: uppercase;
-    text-shadow: 0 0 5px #000;
-    font-weight: bold;
-    color: white;
-}
-
-.logo span {
-    color: #333;
-    text-shadow: 0 0 5px #ccc;
-}
-
-.portada {
-    float: right;
-}
-
-.menuRegistro {
-    list-style: none;
-}
-
-.menuRegistro li {
-    text-transform: capitalize;
-    display: inline-block;
-    margin-left: 10px;
-}
-
-.menuRegistro a {
-    color: white;
-    text-decoration: none;
-}
-
-.menuRegistro a:hover {
-    color: #ee0e0e;
-}
-
-.home {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 30px;
-}
-
-.keywords {
-    text-align: center;
-    padding: 10px;
-    margin: 10px;
-}
-
-.oferta p {
-    width: 50%;
-    padding: 10px;
-}
-
-.table {
-    border-color: #000;
-}
-
-.ofertaslaborales {
-    width: 70%;
-    display: flex;
+.consultaUsuario {
     flex-direction: column;
     justify-content: space-between;
-}
-
-.oferta {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 10px;
-    padding: 10px;
-}
-
-.oferta a {
-    background-color: rgb(58, 73, 214);
-    text-decoration: none;
-    color: #fff;
-    padding: 10px 20px;
-}
-
-.oferta a:hover {
-    background-color: #333;
-}
-
-.imgOfertas {
-    width: auto;
-    height: 200px;
-}
-
-.login {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: calc(100vh - 100px);
-
-}
-
-.formLogin {
-    max-width: 600px;
-}
-
-.camposForm {
-    margin-bottom: 15px;
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-/* Estilos para el dropdown*/
-.dropdown {
+    text-align: center;
     position: relative;
-    display: inline-block;
-    border: #000 solid 1px;
-    padding: 10px;
-    background-color: white;
+    display: grid;
+    width: auto;
+    height: auto;
+    margin: 0 auto;
+    padding: 1.35rem;
+    background-color: #fff;
+    border: 0.0675 solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1.35rem;
 }
 
-.dropbtn {
+.dropbtnConsultaUsuario {
     background-color: rgb(58, 73, 214);
     color: white;
     border: none;
     cursor: pointer;
     padding: 1rem;
+    padding-right: 2rem;
     position: relative;
+    width: 20.25rem;
+    min-width: none;
+    max-width: 20.25rem;
+    height: 3.78rem;
+    text-align: center;
+    max-height: 3.78rem;
+    min-height: none;
 }
 
-.dropdown-content {
+.dropbtnConsultaUsuario::after {
+    content: "▼";
+    position: absolute;
+    top: 50%;
+    right: 0.675rem;
+    transform: translateY(-50%);
+    font-weight: bold;
+}
+
+.dropdownConsultaUsuario {
+    position: relative;
+    display: inline-block;
+    max-width: 54rem;
+    margin: 0 auto;
+    padding: 1.35rem;
+    background-color: white;
+    border: 0.0675rem solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
+}
+
+.dropdownConsultaUsuario-content {
     display: none;
     position: absolute;
     background-color: rgb(58, 73, 214);
@@ -172,56 +62,168 @@ header {
     z-index: 1;
 }
 
-.dropdown-content a {
+
+.dropdownConsultaUsuario-content a {
     color: white;
-    padding: 1rem 1.6rem;
     text-decoration: none;
     display: block;
+    width: 20.25rem;
 }
 
-.dropdown-content a:hover {
+.dropdownConsultaUsuario-content a:hover {
     background-color: #333;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdownConsultaUsuario:hover .dropdownConsultaUsuario-content {
     display: block;
 }
 
-.active {
-    font-weight: bold;
+.opcionConsultaUsuario {
+    width: 20.25rem;
+    height: 2.025rem;
 }
 
-/* Estilos para hacer responsive */
-@media screen and (max-width: 768px) {
-    header {
-        flex-direction: column;
-        align-items: flex-start;
-        text-align: center;
-    }
 
-    .header-center {
-        margin-top: 1rem;
-    }
 
-    main {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .main-left,
-    .main-center,
-    .main-right {
-        width: 100%;
-        text-align: center;
-    }
-
-    .dropdown {
-        text-align: center;
-    }
+.infoUsuario {
+    max-width: 27rem;
+    width: 27rem;
+    min-width: 27rem;
+    max-height: 38.1375rem;
+    height: 38.1375rem;
+    margin: 0 auto;
+    padding: 1.35rem;
+    background-color: #fff;
+    border: 0.0675rem solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
+    padding-bottom: 6.75rem;
+    position: relative;
 }
 
-.btn.btn-secondary {
+.usuarioDatosView {
+    margin: 0;
+    margin-bottom: 0.675rem;
+    text-align: left;
+}
+
+.usuarioDatosViewIMG {
+    text-align: center;
+}
+
+
+.imgUsuarioDatosView {
+    max-width: 100%;
+    height: auto;
+}
+
+.espacio {
+    margin-bottom: 1.35rem;
+}
+
+.espacio3 {
+    margin-bottom: 4.05rem;
+}
+
+.usuarioDatos {
+    margin: 0;
+    margin-bottom: 0.675rem;
+    text-align: left;
+}
+
+.ofertasYPaquetes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+}
+
+.envolver {
+    width: auto;
+    height: auto;
+    margin: 0 auto;
+    padding: 1.35rem;
+    background-color: #fff;
+    border: 0.0675rem solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
+    padding-bottom: 6.75rem;
+    position: relative;
+}
+
+.envolver3 {
+    width: auto;
+    height: auto;
+    margin: 0 auto;
+    padding: 1.35rem;
+    background-color: #fff;
+    border: 0.0675rem solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
+    padding-bottom: 6.75rem;
+    position: relative;
+}
+
+.dropdownConsultaUsuarioOfertas {
+    position: relative;
+    display: inline-block;
+    max-width: 54rem;
+    margin: 0 auto;
+    padding: 1.35rem;
+    background-color: white;
+    border: 0.0675rem solid #ccc;
+    border-radius: 0.3375rem;
+    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
+}
+
+.dropdownConsultaUsuarioOfertas-content {
+    display: none;
+    position: absolute;
     background-color: rgb(58, 73, 214);
-    border: #000 solid 1px;
+    min-width: 10rem;
+    z-index: 1;
+}
 
+
+.dropdownConsultaUsuarioOfertas-content a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    width: 20.25rem;
+}
+
+.dropdownConsultaUsuarioOfertas-content a:hover {
+    background-color: #333;
+}
+
+.dropdownConsultaUsuarioOfertas:hover .dropdownConsultaUsuarioOfertas-content {
+    display: block;
+}
+
+.dropbtnConsultaUsuarioOferta {
+    background-color: rgb(58, 73, 214);
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 1rem;
+    padding-right: 2rem;
+    position: relative;
+    width: 20.25rem;
+    min-width: none;
+    max-width: 20.25rem;
+    height: 3.78rem;
+    text-align: center;
+    max-height: 3.78rem;
+    min-height: none;
+}
+
+.dropbtnConsultaUsuarioOferta::after {
+    content: "▼";
+    position: absolute;
+    top: 50%;
+    right: 0.675rem;
+    transform: translateY(-50%);
+    font-weight: bold;
 }
