--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css
@@ -1,221 +1,56 @@
-.paquetesConsulta {
+.oferta p {
+    width: 50%;
+    padding: 10px;
+}
+
+.table {
+    border-color: #000;
+}
+
+.consultaPaqueteTipoPublicacion {
     width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-/* Estilos para el centro*/
-.mainCenter {
-    max-height: 51.3rem;
-    max-width: 54rem;
-    margin: 0 auto;
-    width: 54rem;
+.paqueteTipoPublicacion {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 10px;
+    padding: 10px;
 }
 
-.dropbtnConsulta {
+.paqueteTipoPublicacion a {
     background-color: rgb(58, 73, 214);
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 1rem;
-    padding-right: 2rem;
-    position: relative;
-    width: 20.25rem;
-    min-width: none;
-    max-width: 20.25rem;
-    height: 3.78rem;
-    text-align: center;
-    max-height: 3.78rem;
-    min-height: none;
-}
-
-.dropbtnConsulta::after {
-    content: "▼";
-    position: absolute;
-    top: 50%;
-    right: 0.675rem;
-    transform: translateY(-50%);
-    font-weight: bold;
-}
-
-.dropdownConsulta-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(58, 73, 214);
-    min-width: 10rem;
-    z-index: 1;
-}
-
-
-.dropdownConsulta-content a {
-    color: white;
     text-decoration: none;
-    display: block;
-    width: 20.25rem;
+    color: #fff;
+    padding: 10px 20px;
 }
 
-.dropdownConsulta-content a:hover {
+.paqueteTipoPublicacion a:hover {
     background-color: #333;
 }
 
-.dropdownConsulta:hover .dropdownConsulta-content {
-    display: block;
-}
-
-.h5 {
-    height: auto;
+.imgOfertas {
     width: auto;
-    text-align: center;
+    height: 200px;
 }
 
-.infoPaquete {
-    max-width: 27rem;
-    width: 27rem;
-    min-width: 27rem;
-    max-height: 38.1375rem;
-    height: 38.1375rem;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: #fff;
-    border: 0.0675rem solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-    padding-bottom: 6.75rem;
-    position: relative;
+.login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: calc(100vh - 100px);
+
 }
 
-.h7 {
-    font-size: 1.8225rem;
-    margin-bottom: 1.35rem;
+.formLogin {
+    max-width: 600px;
 }
 
-.ofertaDatosView {
-    margin: 0;
-    margin-bottom: 0.675rem;
-    text-align: left;
-}
-
-.ofertaDatosViewIMG {
-    text-align: center;
-}
-
-
-.imgOfertasDatosView {
-    max-width: 100%;
-    height: auto;
-}
-
-.dropdownConsulta {
-    position: relative;
-    display: inline-block;
-    max-width: 54rem;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: white;
-    border: 0.0675rem solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-}
-
-.paquetesConsulta {
-    text-align: center;
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: #fff;
-    border: 0.0675 solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-}
-
-.espacio {
-    margin-top: 1.35rem;
-}
-
-.ofertasLaborales {
-    display: none;
-}
-
-.opcionConsulta {
-    width: 20.25rem;
-    height: 2.025rem;
-}
-
-.ofertasLaborales {
-    position: relative;
-    display: inline-block;
-    max-width: 54rem;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: #fff;
-    background-color: white;
-    border: 0.0675rem solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-}
-
-.dropbtnOfertas {
-    background-color: rgb(58, 73, 214);
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 1rem;
-    padding-right: 2rem;
-    position: relative;
-    width: 20.25rem;
-    min-width: none;
-    max-width: 20.25rem;
-    height: 3.78rem;
-    text-align: center;
-    max-height: 3.78rem;
-    min-height: none;
-}
-
-.dropbtnOfertas::after {
-    content: "▼";
-    position: absolute;
-    top: 50%;
-    right: 0.675rem;
-    transform: translateY(-50%);
-    font-weight: bold;
-}
-
-.dropdownOfertas {
-    position: relative;
-    display: inline-block;
-    max-width: 54rem;
-    margin: 0 auto;
-    padding: 1.35rem;
-}
-
-.dropdownOfertas-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(58, 73, 214);
-    min-width: 10rem;
-    z-index: 1;
-    text-align: center;
-    width: 20.25rem;
-    display: none;
-}
-
-
-.dropdownOfertas-content a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    width: 20.25rem;
-}
-
-.dropdownOfertas-content a:hover {
-    background-color: #333;
-}
-
-.dropdownOfertas:hover .dropdownOfertas-content {
-    display: block;
+.camposForm {
+    margin-bottom: 15px;
 }
