--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaUsuario.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaUsuario.css
@@ -1,229 +1,42 @@
 .consultaUsuario {
     flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
     position: relative;
-    display: grid;
+    display: flex;
     width: auto;
     height: auto;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: #fff;
-    border: 0.0675 solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1.35rem;
-}
-
-.dropbtnConsultaUsuario {
-    background-color: rgb(58, 73, 214);
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 1rem;
-    padding-right: 2rem;
-    position: relative;
-    width: 20.25rem;
-    min-width: none;
-    max-width: 20.25rem;
-    height: 3.78rem;
-    text-align: center;
-    max-height: 3.78rem;
-    min-height: none;
-}
-
-.dropbtnConsultaUsuario::after {
-    content: "▼";
-    position: absolute;
-    top: 50%;
-    right: 0.675rem;
-    transform: translateY(-50%);
-    font-weight: bold;
-}
-
-.dropdownConsultaUsuario {
-    position: relative;
-    display: inline-block;
-    max-width: 54rem;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: white;
-    border: 0.0675rem solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-}
-
-.dropdownConsultaUsuario-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(58, 73, 214);
-    min-width: 10rem;
-    z-index: 1;
-}
-
-
-.dropdownConsultaUsuario-content a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    width: 20.25rem;
-}
-
-.dropdownConsultaUsuario-content a:hover {
-    background-color: #333;
-}
-
-.dropdownConsultaUsuario:hover .dropdownConsultaUsuario-content {
-    display: block;
-}
-
-.opcionConsultaUsuario {
-    width: 20.25rem;
-    height: 2.025rem;
-}
-
-
-
-.infoUsuario {
-    max-width: 27rem;
-    width: 27rem;
-    min-width: 27rem;
-    max-height: 38.1375rem;
-    height: 38.1375rem;
-    margin: 0 auto;
+    margin: auto auto;
     padding: 1.35rem;
     background-color: #fff;
     border: 0.0675rem solid #ccc;
     border-radius: 0.3375rem;
     box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-    padding-bottom: 6.75rem;
-    position: relative;
-}
-
-.usuarioDatosView {
-    margin: 0;
-    margin-bottom: 0.675rem;
-    text-align: left;
-}
-
-.usuarioDatosViewIMG {
-    text-align: center;
-}
-
-
-.imgUsuarioDatosView {
-    max-width: 100%;
-    height: auto;
-}
-
-.espacio {
-    margin-bottom: 1.35rem;
+    top: 0;
+    justify-content: center;
+    align-items: center;
 }
 
 .espacio3 {
-    margin-bottom: 4.05rem;
+    margin-top: 5rem;
 }
 
-.usuarioDatos {
-    margin: 0;
-    margin-bottom: 0.675rem;
-    text-align: left;
-}
-
-.ofertasYPaquetes {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.mainCenter
+{
+    width: auto;
+    height: auto;
     margin: 0 auto;
+    text-align:start;
+}
+
+.containerGrid
+{
     width: 100%;
     height: auto;
 }
 
-.envolver {
-    width: auto;
-    height: auto;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: #fff;
-    border: 0.0675rem solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-    padding-bottom: 6.75rem;
-    position: relative;
+.thClass{
+    width: 40%;
 }
 
-.envolver3 {
-    width: auto;
-    height: auto;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: #fff;
-    border: 0.0675rem solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-    padding-bottom: 6.75rem;
-    position: relative;
-}
-
-.dropdownConsultaUsuarioOfertas {
-    position: relative;
-    display: inline-block;
-    max-width: 54rem;
-    margin: 0 auto;
-    padding: 1.35rem;
-    background-color: white;
-    border: 0.0675rem solid #ccc;
-    border-radius: 0.3375rem;
-    box-shadow: 0rem 0rem 0.675rem rgba(0, 0, 0, 0.2);
-}
-
-.dropdownConsultaUsuarioOfertas-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(58, 73, 214);
-    min-width: 10rem;
-    z-index: 1;
-}
-
-
-.dropdownConsultaUsuarioOfertas-content a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    width: 20.25rem;
-}
-
-.dropdownConsultaUsuarioOfertas-content a:hover {
-    background-color: #333;
-}
-
-.dropdownConsultaUsuarioOfertas:hover .dropdownConsultaUsuarioOfertas-content {
-    display: block;
-}
-
-.dropbtnConsultaUsuarioOferta {
-    background-color: rgb(58, 73, 214);
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 1rem;
-    padding-right: 2rem;
-    position: relative;
-    width: 20.25rem;
-    min-width: none;
-    max-width: 20.25rem;
-    height: 3.78rem;
-    text-align: center;
-    max-height: 3.78rem;
-    min-height: none;
-}
-
-.dropbtnConsultaUsuarioOferta::after {
-    content: "▼";
-    position: absolute;
-    top: 50%;
-    right: 0.675rem;
-    transform: translateY(-50%);
-    font-weight: bold;
+.thClassLarge{
+    width: 60%;
 }
