Pronto mi perfil empresa y postulante, asi como movimientos entre index

--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/css/general.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/css/general.css
@@ -79,11 +79,15 @@ footer {
 }
 
 .imgPerfil {
-  width: 40px;
+  width: 60px;
 }
 
 .selectUsuario {
   padding: 0.5px;
+}
+
+.fotoDePerfil {
+  width: 250px;
 }
 
 
