--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css
@@ -1,6 +1,6 @@
 .oferta p {
     width: 50%;
-    padding: 10px;
+    padding: 0.675rem;
 }
 
 .table {
@@ -19,15 +19,15 @@
     flex-direction: row;
     flex-wrap: wrap;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 10px;
-    padding: 10px;
+    margin: auto;
+    padding: 0.675rem;
 }
 
 .paqueteTipoPublicacion a {
     background-color: rgb(58, 73, 214);
     text-decoration: none;
     color: #fff;
-    padding: 10px 20px;
+    padding: 0.675rem 1.35rem;
 }
 
 .paqueteTipoPublicacion a:hover {
@@ -36,21 +36,21 @@
 
 .imgOfertas {
     width: auto;
-    height: 200px;
+    height: 13.5rem;
 }
 
 .login {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 100px);
+    min-height: calc(100vh - 6.75rem);
 
 }
 
 .formLogin {
-    max-width: 600px;
+    max-width: 40.5rem;
 }
 
 .camposForm {
-    margin-bottom: 15px;
+    margin-bottom: 1.0125;
 }
