--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaDeTiposDePublicacionDeOfertaLaboral.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/css/consultaDeTiposDePublicacionDeOfertaLaboral.css
@@ -7,7 +7,7 @@
     border-color: #000;
 }
 
-.consultaTipoPublicacion {
+.consultaPaqueteTipoPublicacion {
     width: 70%;
     display: flex;
     flex-direction: column;
@@ -33,7 +33,6 @@
 .paqueteTipoPublicacion a:hover {
     background-color: #333;
 }
-
 
 .login {
     display: flex;
