--- a/Tarea2/Servidor-Web/src/main/webapp/resource/css/general.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/resource/css/general.css
@@ -15,7 +15,6 @@ nav {
   background-color: rgb(58, 73, 214);
 }
 
-
 footer {
   height: 4.875rem;
   position: fixed;
@@ -82,6 +81,11 @@ footer {
 .dropdown-menu
 {
 	--bs-dropdown-item-padding-x: 0rem;
+}
+
+.espacio
+{
+	padding: 0.03375rem;
 }
 
 .opcUsuario
