--- a/Tarea2/Servidor-Web/src/main/webapp/resource/css/general.css
+++ b/Tarea2/Servidor-Web/src/main/webapp/resource/css/general.css
@@ -112,13 +112,11 @@ footer {
 	padding: 0rem;
 }
 
-.videoContainer {
-	width: 100%;
-	height: 100%;
-	display: none;
+.videoPostulacion {
+	width:auto; 
+	height: auto;
 }
 
-.videoBorder
-{
+.videoBorder {
 	background-color: black;
 }
