--- a/Tarea2/Servidor-Central/.settings/org.eclipse.wst.common.component
+++ b/Tarea2/Servidor-Central/.settings/org.eclipse.wst.common.component
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="ServidorCentral">
-                
-        <wb-resource deploy-path="/" source-path="/src"/>
-                
-        <wb-resource deploy-path="/" source-path="/img/usuarios"/>
-                
-        <wb-resource deploy-path="/" source-path="/img/paquetes"/>
-                
-        <wb-resource deploy-path="/" source-path="/img/ofertas"/>
             
-    </wb-module>
     
+    <wb-module deploy-name="ServidorCentral">
+                        
+        
+        <wb-resource deploy-path="/" source-path="/src"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/img/usuarios"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/img/paquetes"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/img/ofertas"/>
+        <wb-resource deploy-path="/" source-path="/resources"/>
+                    
+    
+    </wb-module>
+        
+
 </project-modules>
