--- a/Tarea2/Servidor-Web/.settings/org.eclipse.wst.common.component
+++ b/Tarea2/Servidor-Web/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                        
+                                            
     
     
     
@@ -8,8 +8,10 @@
     
     
     
-    <wb-module deploy-name="Servidor-Web-0.0.1-SNAPSHOT">
-                                                                
+    
+    <wb-module deploy-name="Servidor-Web">
+                                                                        
+        
         
         
         
@@ -17,7 +19,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                
+                                                                                        
+        
         
         
         
@@ -27,7 +30,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                
+                                                                                        
+        
         
         
         
@@ -37,7 +41,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                        
+                                                                                
+        
         
         
         
@@ -46,7 +51,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                                                                
+                                                                                        
+        
         
         
         
@@ -56,7 +62,8 @@
         
         
         <property name="context-root" value="Servidor-Web"/>
-                                                                                
+                                                                                        
+        
         
         
         
@@ -66,7 +73,8 @@
         
         
         <property name="java-output-path" value="/Servidor-Web/build/classes"/>
-                                                                            
+                                                                                    
+    
     
     
     
@@ -76,7 +84,8 @@
     
     
     </wb-module>
-                                    
+                                        
+
 
 
 
